# citadel-review-snapshot-2026-03-22

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  index.html  knip.json  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/backend/: .env.example  DATA_SCHEMA_SSOT.md  ai_schemas.py  alembic.ini  auth.py  conftest.py  database.py  error_codes.py  main.py  models.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  schemas.py
apps/backend/alembic/: README  env.py
apps/backend/alembic/versions/: 717c5bbe7539_init.py  a1b2c3d4e5f6_add_inspection_key_to_inspection_details.py  a9b1c2d3e4f5_add_report_format_id_to_reports.py  b1c2d3e4f5a6_drop_report_type_from_reports.py  b2c3d4e5f6a7_split_inspection_detail_to_table_data.py  c4d5e6f7a8b9_add_report_format_and_report_format_template.py  ca2e60fbbc4f_merge_multiple_heads.py  d5e6f7a8b9c0_metadata_driven_schema.py  d6e7f8a9b0c1_report_sites_and_slim_target_instruments.py  e0f1a2b3c4d5_change_cal_at_to_date.py  e7f8a9b0c1d2_remove_instrument_property.py  (+1 more)
apps/backend/config/: ai.py  schema_meta_generated.py  validation.py
apps/backend/data/: demo_data.json
apps/backend/routers/: demo.py  masters.py  missions.py  report_formats.py  reports.py  sync.py  templates.py
apps/backend/scripts/: export_openapi.py  gen_templates.py
apps/backend/services/: __init__.py  ai_extractor.py  ai_report_builder.py  context_models.py  db_loader.py  demo_data.py  mission_service.py  report_api_service.py  report_format_maintenance.py  sync_meta.py  template_auto_placer.py  template_editor.py  template_safety.py  upload_session.py
apps/backend/services/crud/: base.py  (+1 more)
apps/backend/tests/: README.md  conftest.py  factories.py  helpers.py  test_polyfactory_bug.py
apps/backend/utils/: crud_router.py  date_utils.py  excel_to_text.py  exceptions.py  file_utils.py  paths.py  placeholder_matching.py  quarantine.py  serialization.py
(+303 files in other folders)
