[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citadel-backend"
version = "1.0.0"
description = "Citadel Backend API - FastAPI + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "xlwings>=0.30.0",
    "pypdf>=4.0.0",
    "psutil>=5.9.0",
    "openpyxl>=3.1.0",
    "alembic>=1.18.0",
    "psycopg2-binary>=2.9.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "defusedxml>=0.7.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.1",
    "bandit>=1.7.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "polyfactory>=2.15.0",
    "testcontainers[postgres]>=3.7.1",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["assets*", "output_temp*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["tests", "alembic", "**/alembic/**", "models.py", "schemas.py", "scripts"]
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportAssignmentType = "none"
reportOptionalSubscript = "none"
reportOptionalOperand = "none"
reportGeneralTypeIssues = "none"
pythonVersion = "3.11"
